--- a/src/App.css
+++ b/src/App.css
@@ -88,6 +88,11 @@ body {
     font-size: 1.5rem;
 }
 
+.posts-center {
+    flex-basis: 100%;
+    overflow-y: auto;
+}
+
 .imagePost {
     height: 220px;
     border-radius: 4px 4px 0 0;
