--- a/src/App.css
+++ b/src/App.css
@@ -103,14 +103,14 @@ body {
     position: relative;
     display: flex;
     flex-direction: column;
-    width: 100%;
-    color: var(--bs-modal-color);
-    pointer-events: auto;
-    background-color: var(--bs-modal-bg);
-    background-clip: padding-box;
-    border: var(--bs-modal-border-width) solid var(--bs-modal-border-color);
-    border-radius: var(--bs-modal-border-radius);
-    outline: 0;
+    width: 80%;
+    background-color: white;
+    border-radius: 10px;
+}
+
+.modal-content::backdrop {
+    backdrop-filter: blur(8px);
+    opacity: 1;
 }
 
 .create-account {
@@ -125,3 +125,8 @@ body {
     background-color: white;
 }
 
+#close-form {
+    position: absolute;
+    top: 0;
+    right: 0px;
+}
