--- a/src/App.css
+++ b/src/App.css
@@ -1,132 +1,138 @@
 .header-container {
-    z-index: 1;
+  z-index: 1;
 }
 
 .header-form form {
-    width: 360px; 
-    border-radius: 21px;
+  width: 360px;
+  border-radius: 21px;
 }
 
 .custom-search img {
-    border: none;
+  border: none;
 }
 
 body {
-    margin: 0;
-    font-family: var(--bs-body-font-family);
-    font-size: var(--bs-body-font-size);
-    font-weight: var(--bs-body-font-weight);
-    line-height: var(--bs-body-line-height);
-    color: var(--bs-body-color);
-    text-align: var(--bs-body-text-align);
-    background-color: var(--bs-body-bg);
-    -webkit-text-size-adjust: 100%;
-    -webkit-tap-highlight-color: transparent;
-    z-index: 1;
-    overflow-x: hidden;
+  margin: 0;
+  font-family: var(--bs-body-font-family);
+  font-size: var(--bs-body-font-size);
+  font-weight: var(--bs-body-font-weight);
+  line-height: var(--bs-body-line-height);
+  color: var(--bs-body-color);
+  text-align: var(--bs-body-text-align);
+  background-color: var(--bs-body-bg);
+  -webkit-text-size-adjust: 100%;
+  -webkit-tap-highlight-color: transparent;
+  z-index: 1;
+  overflow-x: hidden;
 }
 
 .header-container {
-    justify-content: center;
-    padding: 10px;
-    box-shadow: rgb(0, 0, 0, 0.12);
-    display: flex;
+  justify-content: center;
+  padding: 10px;
+  box-shadow: rgb(0, 0, 0, 0.12);
+  display: flex;
 }
 
 .header-img {
-    flex: 1;
-    overflow: hidden;
-    padding: 16px;
-    margin: 0px 26px;
-    
+  flex: 1;
+  overflow: hidden;
+  padding: 16px;
+  margin: 0px 26px;
 }
 
 .search-img {
-    border: none !important;
-    padding: none;
+  border: none !important;
+  padding: none;
 }
 
 .header-img img {
-        overflow: clip;
+  overflow: clip;
 }
 
 .header-form {
-    flex: 1;
+  flex: 1;
 }
 
 .header-form input {
-    background-color: #F2F2F2;
+  background-color: #f2f2f2;
 }
 
 .header-button {
-    flex: 1;
-    color: #2e2e2e;
-    text-align: right;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
+  flex: 1;
+  color: #2e2e2e;
+  text-align: right;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
 }
 
 .container1 {
-    background: url("https://eco-n-tech.com/wp-content/cache/thumb/ec/890ddcd1c2ce5ec_3806x1034.png") center center / cover no-repeat;
-    z-index: 1;
-    height: 480px;
-    width: 100%;
-    overflow: hidden;
+  background: url("https://eco-n-tech.com/wp-content/cache/thumb/ec/890ddcd1c2ce5ec_3806x1034.png")
+    center center / cover no-repeat;
+  z-index: 1;
+  height: 480px;
+  width: 100%;
+  overflow: hidden;
 }
 
 .container1 img {
-    height: 100%;
-    width: 100%;
-    object-fit: contain;
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
 }
 
 .container1-text {
-    margin-top: 325px;
-    margin-left: 50px;
-    font-size: 1.5rem;
+  margin-top: 325px;
+  margin-left: 50px;
+  font-size: 1.5rem;
 }
 
 .posts-center {
-    flex-basis: 100%;
-    overflow-y: auto;
+  flex-basis: 100%;
+  overflow-y: auto;
 }
 
 .imagePost {
-    height: 220px;
-    border-radius: 4px 4px 0 0;
-    background-color: #c4c4c4;
+  height: 220px;
+  border-radius: 4px 4px 0 0;
+  background-color: #c4c4c4;
 }
 
 .modal-content {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    width: 80%;
-    background-color: white;
-    border-radius: 10px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  background-color: white;
+  border-radius: 10px;
 }
 
 .modal-content::backdrop {
-    backdrop-filter: blur(8px);
-    opacity: 1;
+  backdrop-filter: blur(8px);
+  opacity: 1;
 }
 
 .create-account {
-    border: 1px solid black;
-    margin: auto;
-   
+  border: 1px solid black;
+  margin: auto;
 }
 
 #create-form {
-    display: none;
-    z-index: 2;
-    background-color: white;
+  display: none;
+  z-index: 2;
+  background-color: white;
 }
 
 #close-form {
-    position: absolute;
-    top: 0;
-    right: 0px;
+  position: absolute;
+  top: 0;
+  right: 0px;
+}
+
+.side-profile {
+  display: flex;
+  margin-left: 5rem;
+  gap: 0.5rem;
+  align-items: center;
 }
