--- a/src/App.css
+++ b/src/App.css
@@ -133,7 +133,7 @@ body {
 }
 
 #modal-content {
-    width: 50rem;
+  width: 50rem;
 }
 
 .side-profile {
@@ -144,48 +144,71 @@ body {
 }
 
 .join-group {
-    display: none;
-    position: absolute;
-    top: 20px;
-    right: 20px;
+  display: none;
+  position: absolute;
+  top: 20px;
+  right: 20px;
 }
 
 .join-group:hover {
-    border: none;
+  border: none;
 }
 
 #joinBtn {
-    display: none;
+  display: none;
 }
 
 #modal-header {
-    display: flex;
+  display: flex;
+}
+
+#main {
+  gap: 5rem;
+}
+
+#mobile-posts-header {
+  display: none;
 }
 
 @media (max-width: 991px) {
-    #joinBtn {
-        display: block;
-    }
+  #joinBtn {
+    display: block;
+  }
 
-    #create-form {
-        width: 100%;
-    }
+  #create-form {
+    width: 100%;
+  }
 
-    #modal-content {
-        width: 100%;
-        margin: 0 auto;
-        margin-top: 15rem;
-    }
+  #modal-content {
+    width: 100%;
+    margin: 0 auto;
+    margin-top: 15rem;
+  }
 
-    #form-side-img {
-        display: none;
-    }
+  #form-side-img {
+    display: none;
+  }
 
-    #form-row {
-        display: block;
-    }
+  #form-row {
+    display: block;
+  }
 
-    #modal-header {
-        display: none;
-    }
+  #modal-header {
+    display: none;
+  }
+
+  .posts-mobile {
+    display: inline;
+    font-weight: bold;
+    color: #212529;
+    margin: 0;
+  }
+
+  #main {
+    gap: 0;
+  }
+
+  #mobile-posts-header {
+    display: flex;
+  }
 }
