--- a/src/App.css
+++ b/src/App.css
@@ -174,6 +174,10 @@ body {
   display: none;
 }
 
+.edit-post {
+  display: none;
+}
+
 @media (max-width: 991px) {
   #joinBtn {
     display: block;
@@ -220,5 +224,12 @@ body {
     position: absolute;
     top: 20px;
     left: 20px;
+  }
+
+  .edit-post {
+    display: block;
+    position: absolute;
+    bottom: 40px;
+    right: 20px;
   }
 }
