--- a/src/App.css
+++ b/src/App.css
@@ -128,6 +128,7 @@ body {
   position: absolute;
   top: 0;
   right: 0px;
+  border-radius: 10px;
 }
 
 #modal-content {
@@ -229,5 +230,24 @@ body {
     position: absolute;
     bottom: 40px;
     right: 20px;
+  }
+
+  #close-form {
+    background-color: #212529;
+    top: 20px;
+    right: 10px;
+    border-radius: 50%;
+    color: white;
+    font-weight: bold;
+  }
+
+  #create-or-sign {
+    position: absolute;
+    top: 282px;
+    right: 10px;
+  }
+
+  #update1 {
+    padding: 0 0.1rem;
   }
 }
